--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,12 +7,19 @@
             "label": "echo",
             "type": "shell",
             "command": "g++",
-            "args": [],
+            "args": [
+                "${file}",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}.out",
+                "-g"
+            ],
             "group": {
-                "kind":"build",
+                "kind": "build",
                 "isDefault": true
-            }
-            
+            },
+            "problemMatcher": [
+                "$gcc"
+            ]
         }
     ]
 }
