--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,12 +7,13 @@
             "label": "echo",
             "type": "shell",
             "command": "g++",
+            
             "args": [
+                "-g",
                 "${file}",
                 "-o",
-                "-std=c++11",
-                "${fileDirname}/${fileBasenameNoExtension}.out",
-                "-g"
+                "${fileDirname}/${fileBasenameNoExtension}",
+                "-std=c++11"
             ],
             "group": {
                 "kind": "build",
